space thumbs up/down buttons

--- a/travel_destination_recommendation/webapp/templates/theme.html
+++ b/travel_destination_recommendation/webapp/templates/theme.html
@@ -559,7 +559,7 @@
     </div>
   </section>
 
-  <!-- About -->
+  <!-- Final Recommendations -->
   <section class="page-section" id="final_recs" style="display:none">
     <div class="container">
       <div class="row">
@@ -576,8 +576,8 @@
           </a>
           <div class="portfolio-caption">
             <h4 id="rec_1" value=0>Rec 1</h4>
-            <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up_1"/>
-            <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down_1"/> 
+            <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down_1" style="padding: 10px; float: left;"/> 
+            <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up_1" style="padding: 10px; float: right;"/>
           </div>
         </div>
         
@@ -587,8 +587,8 @@
           </a>
           <div class="portfolio-caption">
             <h4 id="rec_2" value=0>Rec 2</h4>
-            <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up_2"/>
-            <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down_2"/> 
+            <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down_2" style="padding: 10px; float: left;"/> 
+            <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up_2" style="padding: 10px; float: right;"/>
           </div>
         </div>
 
@@ -598,8 +598,8 @@
           </a>
           <div class="portfolio-caption">
             <h4 id="rec_3" value=0>Rec 3</h4>
-            <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up_3"/>
-            <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down_3"/> 
+            <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down_3" style="padding: 10px; float: left;"/> 
+            <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up_3" style="padding: 10px; float: right;"/>
           </div>
         </div>
 
@@ -609,8 +609,8 @@
           </a>
           <div class="portfolio-caption">
             <h4 id="rec_4" value=0>Rec 4</h4>
-            <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up_4"/>
-            <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down_4"/> 
+            <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down_4" style="padding: 10px; float: left;"/> 
+            <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up_4" style="padding: 10px; float: right;"/>
           </div>
         </div>
 
@@ -620,8 +620,8 @@
           </a>
           <div class="portfolio-caption">
             <h4 id="rec_5" value=0>Rec 5</h4>
-            <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up_5"/>
-            <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down_5"/> 
+            <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down_5" style="padding: 10px; float: left;"/> 
+            <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up_5" style="padding: 10px; float: right;"/>
           </div>
         </div>
 
@@ -830,7 +830,7 @@
                 <p id="modal_1_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  Close</button>
               </div>
             </div>
           </div>
@@ -858,7 +858,7 @@
                 <p id=modal_2_summary>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  Close</button>
               </div>
             </div>
           </div>
@@ -886,7 +886,7 @@
                 <p id="modal_3_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  Close</button>
               </div>
             </div>
           </div>
@@ -914,7 +914,7 @@
                 <p id="modal_4_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  Close</button>
               </div>
             </div>
           </div>
@@ -942,7 +942,7 @@
                 <p id="modal_5_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close Project</button>
+                  Close</button>
               </div>
             </div>
           </div>
