initial work to open new specified tab

--- a/travel_destination_recommendation/webapp/templates/theme.html
+++ b/travel_destination_recommendation/webapp/templates/theme.html
@@ -366,9 +366,7 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-            <!-- <img src="images/forest_mountain.jpg"> -->
+            <img class="img-fluid" src="images/forest_mountain.jpg" alt="">
           </span>
           <h4 class="service-heading">Forest/Mountain</h4>
           <div class="slidecontainer">
@@ -379,9 +377,7 @@
 
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-            <!-- <img src="images/palace_castle.jpg" width="100" height="80"> -->
+            <img class="img-fluid" src="images/palace_castle.jpg" alt="">
           </span>
           <h4 class="service-heading">Castles</h4>
           <div class="slidecontainer">
@@ -392,9 +388,7 @@
 
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-            <!-- <img src="images/coastal.jpg" width="100" height="80"> -->
+            <img class="img-fluid" src="images/coastal.jpg" alt="">
           </span>
           <h4 class="service-heading">Water</h4>
           <div class="slidecontainer">
@@ -405,9 +399,7 @@
 
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-            <!-- <img src="images/historical.jpg" width="100" height="80"> -->
+            <img class="img-fluid" src="images/historical.jpg" alt="">
           </span>
           <h4 class="service-heading">Historical</h4>
           <div class="slidecontainer">
@@ -418,9 +410,7 @@
 
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-            <!-- <img src="images/urban.jpg" width="100" height="80"> -->
+            <img class="img-fluid" src="images/urban.jpg" alt="">
           </span>
           <h4 class="service-heading">Urban</h4>
           <div class="slidecontainer">
@@ -856,9 +846,9 @@
                 <h2 id="modal_1" class="text-uppercase">Project Name</h2>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="" id="modal_1_img">
                 <p id="modal_1_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                <button class="btn btn-primary" type="button" onclick="window.open('http://google.com','_blank')">
                   <i class="fas fa-times"></i>
-                  Close</button>
+                  More Information</button>
               </div>
             </div>
           </div>
@@ -886,7 +876,7 @@
                 <p id=modal_2_summary>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close</button>
+                  More Information</button>
               </div>
             </div>
           </div>
@@ -914,7 +904,7 @@
                 <p id="modal_3_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close</button>
+                  More Information</button>
               </div>
             </div>
           </div>
@@ -942,7 +932,7 @@
                 <p id="modal_4_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close</button>
+                  More Information</button>
               </div>
             </div>
           </div>
@@ -970,7 +960,7 @@
                 <p id="modal_5_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
-                  Close</button>
+                  More Information</button>
               </div>
             </div>
           </div>
