add source to website

--- a/travel_destination_recommendation/webapp/templates/theme.html
+++ b/travel_destination_recommendation/webapp/templates/theme.html
@@ -663,7 +663,7 @@
         </div>
 
         <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" id="satisfaction_button">Thank you!</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" id="satisfaction_button">Submit Feedback!</a>
           <p id="thank_you_message"></p>
         </div>
 
@@ -696,6 +696,8 @@
               </a>
             </li>
           </ul>
+          <p class="text-muted">Photos and City Summaries sourced from <ricksteves class="com">Rick Steves</ricksteves></p>
+
         </div>
       </div>
     </div>
