add source to photos

--- a/travel_destination_recommendation/webapp/templates/theme.html
+++ b/travel_destination_recommendation/webapp/templates/theme.html
@@ -696,7 +696,7 @@
               </a>
             </li>
           </ul>
-          <p class="text-muted">Photos and City Summaries sourced from <ricksteves class="com">Rick Steves</ricksteves></p>
+          <p class="text-muted">Photos and City Summaries sourced from ricksteves.com</p>
 
         </div>
       </div>
