--- a/travel_destination_recommendation/webapp/templates/theme.html
+++ b/travel_destination_recommendation/webapp/templates/theme.html
@@ -37,22 +37,27 @@
     import warnings
   
     def update_forest_slider_label(ev):
+      """Update forest slider label"""
       forest_slide_val = document["forest_slider"].value
       document["forest_label"].textContent = forest_slide_val
 
     def update_castle_slider_label(ev):
+      """Update castle slider label"""
       castle_slide_val = document["castle_slider"].value
       document["castle_label"].textContent = castle_slide_val
 
     def update_water_slider_label(ev):
+      """Update water slider label"""
       water_slide_val = document["water_slider"].value
       document["water_label"].textContent = water_slide_val
 
     def update_historical_slider_label(ev):
+      """Update historical slider label"""
       historical_slide_val = document["historical_slider"].value
       document["historical_label"].textContent = historical_slide_val
 
     def update_urban_slider_label(ev):
+      """Update urban slider label"""
       urban_slide_val = document["urban_slider"].value
       document["urban_label"].textContent = urban_slide_val
     
@@ -63,6 +68,8 @@
     document["urban_slider"].bind("change", update_urban_slider_label)
     
     def get_random_cities(response):
+        """Gets the random cities and change the 
+        place names from the user scores."""
         if response.status==200 or response.status==0:
             cities = json.loads(response.text)
             change_place_names(cities)
@@ -70,6 +77,7 @@
             warnings.warn(response.text)
         
     def change_place_names(cities):
+      """Changes the default random places to the correct name and image"""
       for k, v in cities.items():
         place = repr(v)
         city_country = place.replace("'", "").replace("[", "").replace("]", "")
@@ -78,7 +86,7 @@
         document[f"place_{int(k)+1}_img"].attrs["src"] = f"images/{city}.jpg"
     
     def get_user_scores(ev):
-        """Get the predicted probability."""
+        """Collects the user feature scores"""
         req = ajax.ajax()
         req.bind('complete', get_random_cities)
         req.open('POST', '/scores', False)
@@ -94,14 +102,17 @@
         req.send(data)
           
     def show_random_places(ev):
+        """Shows the random recommendations section"""
         document["random"].style.display = "inline"
     
     def scroll_to_random(ev):
+        """Scrolls the page to the random recommendation section"""
         document["random"].scrollIntoView()   
 
     document["score_button"].bind("click", get_user_scores, show_random_places, scroll_to_random)
 
     def update_place_1_label(ev):
+      """Update place 1 slider label"""
       place_1_val = document["place_1_slider"].value
       if place_1_val == "-1":
           document["place_1_label"].textContent = "Have been and disliked"
@@ -111,6 +122,7 @@
           document["place_1_label"].textContent = "Have not been"
 
     def update_place_2_label(ev):
+      """Update place 2 slider label"""
       place_2_val = document["place_2_slider"].value
       if place_2_val == "-1":
           document["place_2_label"].textContent = "Have been and disliked"
@@ -120,6 +132,7 @@
           document["place_2_label"].textContent = "Have not been"
 
     def update_place_3_label(ev):
+      """Update place 3 slider label"""
       place_3_val = document["place_3_slider"].value
       if place_3_val == "-1":
           document["place_3_label"].textContent = "Have been and disliked"
@@ -129,6 +142,7 @@
           document["place_3_label"].textContent = "Have not been"                 
 
     def update_place_4_label(ev):
+      """Update place 4 slider label"""
       place_4_val = document["place_4_slider"].value
       if place_4_val == "-1":
           document["place_4_label"].textContent = "Have been and disliked"
@@ -138,6 +152,7 @@
           document["place_4_label"].textContent = "Have not been"     
 
     def update_place_5_label(ev):
+      """Update place 5 slider label"""
       place_5_val = document["place_5_slider"].value
       if place_5_val == "-1":
           document["place_5_label"].textContent = "Have been and disliked"
@@ -147,6 +162,7 @@
           document["place_5_label"].textContent = "Have not been"
     
     def update_place_6_label(ev):
+      """Update place 6 slider label"""
       place_6_val = document["place_6_slider"].value
       if place_6_val == "-1":
           document["place_6_label"].textContent = "Have been and disliked"
@@ -156,6 +172,7 @@
           document["place_6_label"].textContent = "Have not been"                 
 
     def update_place_7_label(ev):
+      """Update place 7 slider label"""
       place_7_val = document["place_7_slider"].value
       if place_7_val == "-1":
           document["place_7_label"].textContent = "Have been and disliked"
@@ -165,6 +182,7 @@
           document["place_7_label"].textContent = "Have not been"                 
 
     def update_place_8_label(ev):
+      """Update place 8 slider label"""
       place_8_val = document["place_8_slider"].value
       if place_8_val == "-1":
           document["place_8_label"].textContent = "Have been and disliked"
@@ -174,6 +192,7 @@
           document["place_8_label"].textContent = "Have not been"
 
     def update_place_9_label(ev):
+    """Update place 9 slider label"""
       place_9_val = document["place_9_slider"].value
       if place_9_val == "-1":
           document["place_9_label"].textContent = "Have been and disliked"
@@ -183,6 +202,7 @@
           document["place_9_label"].textContent = "Have not been"
 
     def update_place_10_label(ev):
+      """Update place 10 slider label"""
       place_10_val = document["place_10_slider"].value
       if place_10_val == "-1":
           document["place_10_label"].textContent = "Have been and disliked"
@@ -203,6 +223,7 @@
     document["place_10_slider"].bind("change", update_place_10_label)
 
     def get_recs(response):
+      """Takes in the recommendations and cleans them"""
       if response.status==200 or response.status==0:
         recommendations = json.loads(response.text)
         clean_recommendations(recommendations)
@@ -210,7 +231,7 @@
         warnings.warn(response.text)
             
     def get_recommendations(ev):
-      """Get the predicted probability."""
+      """Take in previous experience scores to make recommendations"""
       req = ajax.ajax()
       req.bind('complete', get_recs)
       req.open('POST', '/recommend', True)
@@ -231,6 +252,8 @@
       req.send(data)
 
     def clean_recommendations(recommendations):
+      """Replace current recommendations with proper city name,
+      image, and modal"""
       for k, v in recommendations.items():
         place = repr(v)
         city_country = place.replace("'", "").replace("[", "").replace("]", "")
@@ -243,6 +266,7 @@
       get_recommendation_links()
     
     def update_summary(response):
+      """Update the current summary to the summary that matches location"""
       if response.status==200 or response.status==0:
         summaries = json.loads(response.text)
         for k, summary in summaries.items():
@@ -250,6 +274,7 @@
       else:
         warnings.warn(response.text)
     def get_recommendation_summaries():
+      """Get the correct summaries for each recommended city"""
       req = ajax.ajax()
       req.bind('complete', update_summary)
       req.open('POST', '/update_modal', True)
@@ -265,6 +290,7 @@
       req.send(data)
 
     def update_url(response):
+      """Updates the modal url to the appropriate city url"""
       if response.status==200 or response.status==0:
         urls = json.loads(response.text)
         for k, url in urls.items():
@@ -272,6 +298,7 @@
       else:
         warnings.warn(response.text)
     def get_recommendation_links():
+      """Get the correct url for each city"""
       req = ajax.ajax()
       req.bind('complete', update_url)
       req.open('POST', '/update_modal_url', True)
@@ -287,41 +314,53 @@
       req.send(data)
     
     def show_recommendations(ev):
+      """Show final recommendations section"""
       document["final_recs"].style.display = "inline"
     
     def scroll_to_recs(ev):
+      """Scroll to final recommendations section"""
       document["final_recs"].scrollIntoView() 
 
     document["city_rating_button"].bind("click", get_recommendations, show_recommendations, scroll_to_recs)
 
     def rate_1_up(ev):
+      """Rate recommendation 1 up"""
       document["rec_1"].attrs["value"] = 1
         
     def rate_2_up(ev):
+      """Rate recommendation 2 up"""
       document["rec_2"].attrs["value"] = 1
         
     def rate_3_up(ev):
+      """Rate recommendation 3 up"""
       document["rec_3"].attrs["value"] = 1
         
     def rate_4_up(ev):
+      """Rate recommendation 4 up"""
       document["rec_4"].attrs["value"] = 1
         
     def rate_5_up(ev):
+      """Rate recommendation 5 up"""
       document["rec_5"].attrs["value"] = 1
         
     def rate_1_down(ev):
+      """Rate recommendation 1 down"""
       document["rec_1"].attrs["value"] = 0
         
     def rate_2_down(ev):
+      """Rate recommendation 2 down"""
       document["rec_2"].attrs["value"] = 0
         
     def rate_3_down(ev):
+      """Rate recommendation 3 down"""
       document["rec_3"].attrs["value"] = 0
         
     def rate_4_down(ev):
+      """Rate recommendation 4 down"""
       document["rec_4"].attrs["value"] = 0
         
     def rate_5_down(ev):
+      """Rate recommendation 5 down"""
       document["rec_5"].attrs["value"] = 0
     
     document["thumbs_up_1"].bind("click", rate_1_up)
@@ -337,13 +376,14 @@
     document["thumbs_down_5"].bind("click", rate_5_down)
 
     def get_sats(response):
+      """Show thank you message"""
       if response.status==200 or response.status==0:
         document["thank_you_message"].textContent = "Thank you for your feedback"   
       else:
         warnings.warn(response.text)
         
     def get_satisfaction(ev):
-      """Get the predicted probability."""
+      """Collect user satistaction with recommendations."""
       req = ajax.ajax()
       req.bind('complete', get_sats)
       req.open('POST', '/rate_recs', True)
@@ -723,7 +763,6 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="" id="modal_1_img">
                 <p id="modal_1_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <a id="more_1" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href='http://google.com' target="_blank">
-                  <i class="fas fa-times"></i>
                   More Information</a>
               </div>
             </div>
@@ -751,7 +790,6 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="" id="modal_2_img">
                 <p id=modal_2_summary>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <a id="more_2" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href='http://google.com' target="_blank">
-                  <i class="fas fa-times"></i>
                   More Information</a>
               </div>
             </div>
@@ -779,7 +817,6 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/03-full.jpg" alt="" id="modal_3_img">
                 <p id="modal_3_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <a id="more_3" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href='http://google.com' target="_blank">
-                  <i class="fas fa-times"></i>
                   More Information</a>
               </div>
             </div>
@@ -807,7 +844,6 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/04-full.jpg" alt="" id="modal_4_img">
                 <p id="modal_4_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <a id="more_4" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href='http://google.com' target="_blank">
-                  <i class="fas fa-times"></i>
                   More Information</a>
               </div>
             </div>
@@ -835,7 +871,6 @@
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/05-full.jpg" alt="" id="modal_5_img">
                 <p id="modal_5_summary">Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <a id="more_5" class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href='http://google.com' target="_blank">
-                 <i class="fas fa-times"></i>
                   More Information</a>
               </div>
             </div>
